--- a/views/home.html
+++ b/views/home.html
@@ -19,6 +19,14 @@
 
 <body>
 
+	<header class="homebanner">
+
+			<h1 class="homebannertext">
+				<a href="http://tutorialzine.com/2014/03/nodejs-private-webchat/" id="logo">Tutorial<span>zine</span></a>
+			</h1>
+
+	</header>
+
 	<section>
 
 		<div class="homesection">
@@ -34,6 +42,12 @@
 					<div id="big">CHAT ROOM!</div>
 				</div>
 			</a>
+
+			<div class="tutorial">
+				<a title="Download the source code." href="http://tutorialzine.com/2014/03/nodejs-private-webchat/" id="tutorial">
+					or download a copy of the source code here
+				</a>
+			</div>
 		</div>
 
 	</section>
