--- a/views/chat.html
+++ b/views/chat.html
@@ -1,142 +1,228 @@
 <!DOCTYPE html>
-
-<!--
-	This file is rendered by express.js, when the rurl /chat/123456 is visited in a browser.
-	It includes jQuery, socket.io.js (it is automatically served by the socket.io library), 
-	and a few more JavaScript files that you should check out.
--->
-
 <html>
-
 <head>
-
-	<title>Private chat room | Tutorialzine Demo</title>
-
-	<link type="text/css" rel="stylesheet" href="../css/stylesheet.css" />
-	<link href="http://fonts.googleapis.com/css?family=Open+Sans Condensed:300italic,300,700" rel="stylesheet" type="text/css">
-
-
+  <title></title>
+  <meta charset="utf-8">
+  <meta name="application-name" content="Translator" />
+  <link rel="stylesheet" href="../css/style.css">
+  <link rel="stylesheet" href="../css/font-awesome.min.css"> 
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600" rel="stylesheet">
+  <!--Favicons-->
+  <link rel="apple-touch-icon" sizes="57x57" href="../img/favicons/apple-icon-57x57.png">
+  <link rel="apple-touch-icon" sizes="60x60" href="../img/favicons/apple-icon-60x60.png">
+  <link rel="apple-touch-icon" sizes="72x72" href="../img/favicons/apple-icon-72x72.png">
+  <link rel="apple-touch-icon" sizes="76x76" href="../img/favicons/apple-icon-76x76.png">
+  <link rel="apple-touch-icon" sizes="114x114" href="../img/favicons/apple-icon-114x114.png">
+  <link rel="apple-touch-icon" sizes="120x120" href="../img/favicons/apple-icon-120x120.png">
+  <link rel="apple-touch-icon" sizes="144x144" href="../img/favicons/apple-icon-144x144.png">
+  <link rel="apple-touch-icon" sizes="152x152" href="../img/favicons/apple-icon-152x152.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="../img/favicons/apple-icon-180x180.png">
+  <link rel="icon" type="image/png" sizes="192x192"  href="../img/favicons/android-icon-192x192.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="../img/favicons/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="96x96" href="../img/favicons/favicon-96x96.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="../img/favicons/favicon-16x16.png">
+  <link rel="manifest" href="../img/favicons/manifest.json">
+  <meta name="msapplication-TileColor" content="#ffffff">
+  <meta name="msapplication-TileImage" content="../img/favicons/ms-icon-144x144.png">
+  <meta name="theme-color" content="#ffffff">
 </head>
-
 <body>
+  <div class="wrapper">
+    <div class="logo">
+      <a href="/">
+      <svg class="sizeSmall colorNormal" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 141.7 141.7" style="enable-background:new 0 0 142 142;" xml:space="preserve">
+        <g class="circle">
+          <circle class="st0" cx="70.9" cy="70.9" r="70.9" />
+          <path class="st1" d="M29.7,13.2C38.5,7,47,3.1,57.2,1.3c39-6.9,74.7,16.3,82.9,55.2c4.8,23-0.8,43.7-16,61.6
+               c-12.7,14.9-34.5,16.1-50,3.2C59.9,109.5,57.8,87,69.7,72.3c5-6.2,9.4-12.6,10.6-20.7c1.9-13.8-2.3-25.5-13.1-34.2
+               C56.8,9,46.7,6.6,34,11C33,11.4,32.1,11.8,29.7,13.2z" /> </g>
+        <g id="A">
+          <path class="st0" d="M93.4,93.5l-4.1,10.3H84l13.4-32.6h6.1l13.4,32.6h-5.4l-4.2-10.3H93.4z M106.3,90.2l-3.9-9.4 c-0.9-2.1-1.5-4.1-2-6h-0.1c-0.6,1.9-1.2,3.9-2,5.9l-3.9,9.4H106.3z" /> </g>
+        <g id="SYMBOL">
+          <path class="st1" d="M31.9,28.5c0,0,6.2-0.7,7.3,0.7c1.1,1.4-4.3,4-4.3,4s-6.6,4.2-2,0s0.2-3.4,0.2-3.4S30,30.3,31.9,28.5z" />
+          <path class="st1" d="M24.8,42.4c0,0-2.6-0.7,0-1.7s7.2-3.1,7.2-3.1s3.1-1.7,3.5,0.8c0.4,2.4-0.4,5.5-0.4,5.5s-0.1,0.7,1.1-0.5
+                  c1.1-1.1,3.3-3.6,3.3-3.6s1-0.5-0.9,2.5c-1.9,3-3.8,5.3-3.8,5.3l0.4,11.4c0,0,0.6,4.9-2.1,2.2c-2.7-2.7-0.5-10.8-0.5-10.8
+                  s-5.4,5.4-7,3.2c-1.2-1.7,1.1-3.9,2.2-4.9c0.5-0.4,0.9-0.8,1.3-1.3c1-1.3,2.7-3.8,3.5-6.5c1.2-3.9-2.3-0.7-2.3-0.7
+                  S26.8,43.6,24.8,42.4z" />
+          <path class="st1" d="M47.1,37.4c0,0-2.6,0.1,0.5-1.4s3.8-1.6,4.9-1.8s4.1-0.5,2.7,2.1c-1.4,2.6-2.1,2.2-0.8,2.9
+                  c1.3,0.7,0.4,1-1,1.9c-1.4,1-6.8,4.1-6.8,4.1s1.6-1.4,2.2-2.8c0.6-1.4-0.9,1.2-1.3-0.4c-0.4-1.6,4.5-5.2,2.6-4.9
+                  S47.1,37.4,47.1,37.4z" />
+          <path class="st1" d="M42.4,32.9c0,0-4.1-0.1,0-1.5c4.1-1.5,6.6-2.1,9.3-2.5c2.6-0.4,8,0.2,2.9,2s-9.6,2.5-9.1,7.2s2.3,10.8-0.9,7.5
+                  c-3.2-3.3-0.9-9.4-0.9-9.4s2-3.3,1.3-3.3C44.2,32.9,42.9,32.9,42.4,32.9z" />
+          <path class="st1" d="M58.3,45.7c-8.8-0.5-14.7,2.2-14.6,3c0.7,1.4,4.5,0.5,5.3,0.3c1.3-0.4,1.6,0.4,1.7,2.3
+                  c-0.7,0.6-4.9,1.1-3.7,3.7c0.5,1.4,2.5,2.6,2.8,3.1c0.4,1-2,2.8-1.1,2.6c0.9-0.2,1.3-1.1,1.9-1.8c0.5-0.7,1.2,0.5,3.9,1.6
+                  c4.3,1,7-3.7,7.6-5C62.6,54.2,64.7,46.2,58.3,45.7z M50.4,55.2c-0.6,1.8-2.1-0.3-2.1-0.3s-0.9-1.4,1.6-1.4
+                  C49.9,53.5,51,53.4,50.4,55.2z M57.2,56.4c-1.4,0.6-3.6,0.7-4.7,0c0.4-1.1,0.7-2.2,0.9-3c2.8-0.8,3.7-0.7,3.7-1.6
+                  c0,0-0.4-1.9-3.7-1.6c0-1.4-0.8-2.4-0.8-2.4c1.4-0.8,4.7-1,6,0.4C59.7,49.2,59.1,55.6,57.2,56.4z" />
+          <path class="st1" d="M42.8,47.1c0,0,1.8,7.5,3.8,9.8c2,2.3,0.4,4.6-1.4,3S40.7,54,42.8,47.1z" /> </g>
+      </svg>
+      </a>
+    </div>
+    <section class="section">
+      <!-- These elements are displayed as white info cards in the middle of the screen -->
 
-	<header class="banner">
+      <!-- Register -->
+      <div id="connected" class="register hide">
+        <div class="mainCard">
+          <div class="userPhoto"></div>
+          <div class="infoConnected"></div>
+          <div class="data">
+            <form class="loginForm">
+              <div class="loginForm__item">
+                <label for="name">You name:</label>
+                <input id="yourName" type="text" name="name" placeholder="John Brown"> </div>
+              <div class="loginForm__item">
+                <label for="email">You e-mail:</label>
+                <input id="yourEmail" type="text" name="email" placeholder="example@mail.com"> </div>
+              <div class="loginForm__item">
+                <label for="langauge">You language:</label>
+                <select id="yourSelect" name="langauge" disabled></select>
+              </div>
+              <button type="submit" id="yourEnter" value="ENTER" class="defaultBtn">Enter</button>
+            </form>
+          </div>
+        </div>
+      </div>
 
-		<h1 class="bannertext">
-			<a href="http://tutorialzine.com/2014/03/nodejs-private-webchat/" id="logo">Tutorial<span>zine</span>: NODE.JS CHAT TUTORIAL</a>
-		</h1>
-
-	</header>
-
-
-	<section class="section">
-
-		<!-- These elements are displayed as white info cards in the middle of the screen -->
-
-		<div class="connected">
-
-			<img src="../img/unnamed.jpg" id="creatorImage" />
-
-			<div class="infoConnected">
-				<h2>Who are you?</h2>
-				<br/>
-
-				<form class="loginForm">
-					<input type="text" id="yourName" placeholder="Your nick name" /><br/>
-					<input type="text" id="yourEmail" placeholder="Your email address" /><br/>
-					<select id="yourSelect" disabled></select>
-					<input type="submit" id="yourEnter" value="ENTER" />
-				</form>
-
-			</div>
-
-		</div>
-
-		<div class="personinside">
-
-			<img src="../img/unnamed.jpg" id="ownerImage" />
-
-			<div class="infoInside">
-				<h2>Chat with <span class="nickname-chat"></span></h2>
-				<br/>
-
-				<form class="loginForm">
-					<input type="text" id="hisName" placeholder="Your nick name" /><br/>
-					<input type="text" id="hisEmail" placeholder="Your email address" /><br/>
-					<select id="hisSelect" disabled></select>
-					<input type="submit" id="hisEnter" value="CHAT" />
-				</form>
-
-			</div>
-
-		</div>
-
-		<div class="invite-textfield">
-
-			<h2>Oops, there are no other people in this chat!</h2>
-			<h5>Invite a friend by sending them this URL</h5>
-
-			<div class="link">
-				<a title="Invite a friend" href="" id="link"></a>
-			</div>
-
-		</div>
-
-		<div class="left">
-
-			<img src="../img/unnamed.jpg" id="leftImage" />
-
-			<div class="info">
-				<h2><span class="nickname-left"></span> has left this chat.</h2>
-				<h5>Invite somebody else by sending them this page.</h5>
-			</div>
-
-		</div>
-
-		<div class="toomanypeople">
-
-			<h2>Oops, you can not join this chat!</h2>
-			<h5>There are already two people in it. Would you like to create a <a title="New Room" href="/create" id="room">new room</a>?</h5>
-
-		</div>
-
-		<div class="nomessages">
-
-			<img src="../img/unnamed.jpg" id="noMessagesImage" />
-
-			<div class="info">
-				<h2>You are chatting with <span class="nickname-chat"></span>.</h2>
-				<h5>Send them a message from the form below!</h5>
-			</div>
-
-		</div>
-
-		<div class="chatscreen">
-
-			<ul class="chats">
-				<!-- The chat messages will go here -->
-			</ul>
-
-		</div>
-
-	</section>
-
-	<footer>
-
-		<form id="chatform">
-
-			<textarea id="message" placeholder="Write something.."></textarea>
-			<input type="submit" id="submit" value="SEND"/>
-
-		</form>
-
-	</footer>
-
-	<script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-	<script src="../js/moment.min.js"></script>
-	<script src="/socket.io/socket.io.js"></script>
-	<script src="../js/chat.js"></script>
-
+      <!-- Join -->
+      <div id="personinside" class="invite hide">
+        <div class="mainCard">
+          <div class="twoUserPhoto">
+            <div class="userPhoto"></div>
+            <div class="moreIcon">
+              <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" x="0" y="0" viewBox="0 0 612 612" xml:space="preserve" enable-background="new 0 0 612 612">
+                <circle class="dot1" cx="69.55" cy="306" r="69.55" />
+                <circle class="dot2" cx="306" cy="306" r="69.55" />
+                <circle class="dot3" cx="542.46" cy="306" r="69.55" /> </svg>
+            </div>
+            <div class="userPhoto"></div>
+          </div>
+          <p class="invite__description"><span class="nickname-chat"></span> invited you to chat!</p>
+          <form class="loginForm">
+            <div class="loginForm__item">
+              <label for="name">You name:</label>
+              <input id="hisName" type="text" name="name" placeholder="John Brown"> </div>
+            <div class="loginForm__item">
+              <label for="email">You e-mail:</label>
+              <input id="hisEmail" type="text" name="email" placeholder="example@mail.com"> </div>
+            <div class="loginForm__item">
+              <label for="langauge">You language:</label>
+              <select id="hisSelect" name="langauge" disabled> </select>
+            </div>
+            <button type="submit" id="hisEnter" value="ENTER" class="defaultBtn">Join</button>
+          </form>
+        </div>
+      </div>
+ 
+      <!-- Invite -->
+      <div id="invite-textfield" class="invite hide">
+        <div class="mainCard">
+          <div class="twoUserPhoto">
+            <div class="userPhoto"></div>
+            <div class="moreIcon">
+              <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" x="0" y="0" viewBox="0 0 612 612" xml:space="preserve" enable-background="new 0 0 612 612">
+                <circle class="dot1" cx="69.55" cy="306" r="69.55" />
+                <circle class="dot2" cx="306" cy="306" r="69.55" />
+                <circle class="dot3" cx="542.46" cy="306" r="69.55" /> </svg>
+            </div>
+            <div class="userPhoto"></div>
+          </div>
+          <p class="invite__description">Invite a friend by sending them this URL</p>
+          <p class="invite__link">
+            <a title="Invite a friend" href="" id="link"></a>
+          </p>
+          <!-- <div class="invite__share">
+            <p class="share__header">Send invite into social networks:</p>
+            <ul class="share__icons">
+              <li>
+                <i class="fa fa-vk" aria-hidden="true"></i>
+              </li>
+              <li>
+                <i class="fa fa-facebook" aria-hidden="true"></i>
+              </li>
+              <li>
+                <i class="fa fa-google-plus" aria-hidden="true"></i>
+              </li>
+              <li>
+                <i class="fa fa-twitter" aria-hidden="true"></i>
+              </li>
+            </ul>
+          </div> -->
+        </div>
+      </div>
+      
+      <!-- Info -->
+      <div id="left" class="hide">
+      	<div class="mainCard">
+	        <div class="info">
+	          <h2><span class="nickname-left"></span> has left this chat.</h2>
+	          <h5>Invite somebody else by sending them this page.</h5>
+	        </div>
+	      </div>
+      </div>
+      <div id="toomanypeople" class="hide">
+      	<div class="mainCard">
+        	<h2>Oops, you can not join this chat!</h2>
+        	<h5>There are already two people in it. Would you like to create a
+          <a title="New Room" href="/create" id="room">new room</a>?</h5>
+        </div>
+      </div>
+      
+      <!-- Chat -->
+      <div id="chatscreen" class="chat hide">
+        <div class="mainCard">
+          <!--Top of chat window -->
+          <div class="chat__header">
+            <div class="headerProfile">
+              <div class="profileImg"></div>
+              <div class="hisName"><span class="profileName"></span></div>
+            </div>
+            <div class="settings"> </div>
+          </div>
+          <!--Middle of chat window -->
+          <div class="chat__messages">
+            <!--If no messages -->
+            <div class="noMessages">
+              <h2>You are chatting with <span class="profileName"></span></h2>
+              <h5>Send them a message from the form below!</h5>
+            </div>
+            <ul class="messageFlow">
+              <!-- The chat messages will go here -->
+            </ul>
+          </div>
+          <!--Bottom of chat window -->
+          <div class="chat__fieldBlock">
+            <form id="chatform" class="fieldForm">
+              <div class="fieldProfile">
+                <div class="profileImg"></div>
+              </div>
+              <div class="fieldMessage">
+                <textarea name="message" class="messageArea" id="message" placeholder="Type here..."></textarea>
+              </div>
+              <div class="fieldSend">
+                <button class="sendBtn" type="submit" value="SEND">Send</button>
+              </div>
+            </form>
+          </div>
+        </div>
+      </div>
+    </section>
+  </div>
+  <footer>
+    <div class="footer-menu">
+      <ul>
+        <li class="footer-menu__item">
+          <a href="https://gitter.im/translator-project/Lobby" target="_blank">Project discussion</a>
+        </li>
+      </ul>
+    </div>
+    <div class="copyright">
+      <p>Copyright © 2016 Translator BETA version.</p>
+    </div>
+  </footer>
+  <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+  <script src="../js/moment.min.js"></script>
+  <script src="/socket.io/socket.io.js"></script>
+  <script src="../js/main.js"></script>
 </body>
-
 </html>
