--- a/public/sass/other/_base.sass
+++ b/public/sass/other/_base.sass
@@ -30,6 +30,6 @@ input, select
 
 .wrapper
   min-height: 100%
-  position:relative
-  margin: 0 auto ($footer-height * -1)
+  position: relative
+  margin: 0 auto ($footer-height * -1) - 20
   padding-top: 20px
