--- a/views/chat.html
+++ b/views/chat.html
@@ -220,7 +220,7 @@
       <p>Copyright © 2016 Translator BETA version.</p>
     </div>
   </footer>
-  <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+  <script src="../js/jquery-3.1.0.min.js"></script>
   <script src="../js/moment.min.js"></script>
   <script src="/socket.io/socket.io.js"></script>
   <script src="../js/main.js"></script>
