--- a/public/sass/other/_base.sass
+++ b/public/sass/other/_base.sass
@@ -32,4 +32,7 @@ input, select
   min-height: 100%
   position: relative
   margin: 0 auto ($footer-height * -1) - 20
-  padding-top: 20px
+  padding: 20px 0 $footer-height*2 0
+
+.section
+  padding-top: 25px
