--- a/public/sass/pages/_home.sass
+++ b/public/sass/pages/_home.sass
@@ -52,3 +52,18 @@
 
   .defaultBtn
     margin: 10px 0 0 0
+  
+
+  //Animate on home page
+  .messageTo
+    animation:
+      name: fadeInUp
+      delay: 0.5s
+      duration: 2s
+      fill-mode: both
+  .messageFrom
+    animation:
+      name: fadeInUp
+      delay: 1.5s
+      duration: 2s
+      fill-mode: both
