--- a/public/sass/style.sass
+++ b/public/sass/style.sass
@@ -24,7 +24,7 @@
 
 .mainCard
   padding: 50px
-  margin: 25px auto
+  margin: 0 auto
   width: 600px
   background-color: #FFFFFF
   box-shadow: 0 2px 7px rgba(0,0,0,0.2)
