Style and html fixes

--- a/public/sass/_variables.sass
+++ b/public/sass/_variables.sass
@@ -9,5 +9,8 @@ $light-color: #E6E7E7
 $logo-color1: $dark-color
 $logo-color2: $light-color
 
+//Fonts
+$mian-font: 'Open Sans', sans-serif
+
 //Other
 $footer-height: 100px
