--- a/public/sass/other/_base.sass
+++ b/public/sass/other/_base.sass
@@ -2,7 +2,7 @@
   box-sizing: border-box
 
 html, body
-  font-family: 'Open Sans', sans-serif
+  font-family: $mian-font
   margin: 0
   height: 100%
   width: 100%
