--- a/views/home.html
+++ b/views/home.html
@@ -77,12 +77,12 @@
     <div class="footer-menu">
       <ul>
         <li class="footer-menu__item">
-          <a href="https://gitter.im/translator-project/Lobby" target="_blank">Project discussion</a>
+          <a href="https://gitter.im/translator-project/Lobby" target="_blank">We on gitter.im</a>
         </li>
       </ul>
     </div>
     <div class="copyright">
-      <p>Copyright © 2016 Translator BETA version.</p>
+      <p>Copyright © 2016 Translator demo version.</p>
     </div>
   </footer>
 </body>
