--- a/public/css/style.css
+++ b/public/css/style.css
@@ -311,7 +311,7 @@ textarea {
 }
 
 html, body {
-  font-family: 'Open Sans', sans-serif;
+  font-family: "Open Sans", sans-serif;
   margin: 0;
   height: 100%;
   width: 100%;
