--- a/views/chat.html
+++ b/views/chat.html
@@ -29,7 +29,7 @@
 <body>
   <div class="wrapper">
     <div class="logo">
-      <a href="/">
+      <a href="/" title="To home page">
       <svg class="sizeSmall colorNormal" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 141.7 141.7" style="enable-background:new 0 0 142 142;" xml:space="preserve">
         <g class="circle">
           <circle class="st0" cx="70.9" cy="70.9" r="70.9" />
@@ -212,12 +212,12 @@
     <div class="footer-menu">
       <ul>
         <li class="footer-menu__item">
-          <a href="https://gitter.im/translator-project/Lobby" target="_blank">Project discussion</a>
+          <a href="https://gitter.im/translator-project/Lobby" target="_blank">We on gitter.im</a>
         </li>
       </ul>
     </div>
     <div class="copyright">
-      <p>Copyright © 2016 Translator BETA version.</p>
+      <p>Copyright © 2016 Translator demo version.</p>
     </div>
   </footer>
   <script src="../js/jquery-3.1.0.min.js"></script>
