--- a/views/home.html
+++ b/views/home.html
@@ -77,7 +77,7 @@
     <div class="footer-menu">
       <ul>
         <li class="footer-menu__item">
-          <a href="https://gitter.im/translator-project/Lobby" target="_blank">We on gitter.im</a>
+          <a href="/feedback" target="_blank">Feedback</a>
         </li>
       </ul>
     </div>
