Added feedback page

--- a/views/404.html
+++ b/views/404.html
@@ -38,7 +38,7 @@
     <div class="footer-menu">
       <ul>
         <li class="footer-menu__item">
-          <a href="https://gitter.im/translator-project/Lobby" target="_blank">Project discussion</a>
+          <a href="/feedback" target="_blank">Feedback</a>
         </li>
       </ul>
     </div>
