Added to feedback home link

--- a/views/feedback.html
+++ b/views/feedback.html
@@ -68,7 +68,7 @@
     <div class="footer-menu">
       <ul>
         <li class="footer-menu__item">
-          <a href="/feedback" target="_blank">Feedback</a>
+          <a href="/" target="_blank">Home</a>
         </li>
       </ul>
     </div>
