--- a/views/chat.html
+++ b/views/chat.html
@@ -4,7 +4,7 @@
   <title></title>
   <meta charset="utf-8">
   <meta name="application-name" content="Translator" />
-  <link rel="stylesheet" href="../css/style.css">
+  <link rel="stylesheet" href="../css/style.min.css">
   <link rel="stylesheet" href="../css/font-awesome.min.css"> 
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600" rel="stylesheet">
   <!--Favicons-->
@@ -26,6 +26,7 @@
   <meta name="msapplication-TileImage" content="../img/favicons/ms-icon-144x144.png">
   <meta name="theme-color" content="#ffffff">
 </head>
+
 <body>
   <div class="wrapper">
     <div class="logo">
