--- a/public/css/style.css
+++ b/public/css/style.css
@@ -457,7 +457,6 @@ footer {
   color: #FFFFFF;
   text-transform: uppercase;
   border-radius: 8px;
-  -webkit-transition: 0.2s;
   transition: 0.2s;
 }
 
@@ -475,7 +474,6 @@ footer {
   color: #566181;
   background: transparent;
   padding: 0;
-  -webkit-transition: 0.2s;
   transition: 0.2s;
 }
 
@@ -558,7 +556,6 @@ footer {
   padding: 10px;
   border-radius: 8px;
   border: 2px solid #c8cddb;
-  -webkit-transition: 0.2s;
   transition: 0.2s;
 }
 
@@ -578,9 +575,8 @@ footer {
   text-indent: 9.01px;
   color: #566181;
   -webkit-appearance: none;
-  -webkit-transition: 0.2s;
   transition: 0.2s;
-  height: 40px;
+  height: 47px;
 }
 
 .loginForm select:after {
@@ -737,7 +733,6 @@ footer {
   display: inline-block;
   margin: 0 10px;
   font-size: 25px;
-  -webkit-transition: 0.2s;
   transition: 0.2s;
 }
 
@@ -817,6 +812,9 @@ footer {
   padding: 0 20px;
   border-bottom: 1px solid #eee;
   width: 100%;
+  -webkit-box-flex: 1;
+      -ms-flex-positive: 1;
+          flex-grow: 1;
   height: 10%;
 }
 
@@ -825,6 +823,9 @@ footer {
   position: relative;
   overflow-y: scroll;
   height: 75%;
+  -webkit-box-flex: 2;
+      -ms-flex-positive: 2;
+          flex-grow: 2;
 }
 
 .chat__messages::-webkit-scrollbar {
@@ -835,6 +836,9 @@ footer {
   overflow: hidden;
   height: 15%;
   border-top: 1px solid #eee;
+  -webkit-box-flex: 1;
+      -ms-flex-positive: 1;
+          flex-grow: 1;
 }
 
 .chat .profileImg {
@@ -1004,4 +1008,31 @@ footer {
 
 .hide {
   display: none;
+}
+
+@media (max-width: 550px) {
+  .wrapper,
+  .section {
+    padding: 0;
+  }
+  .wrapper {
+    height: 100vh;
+  }
+  .mainCard,
+  .section,
+  .chat,
+  .invite,
+  .register,
+  .chat .mainCard {
+    width: 100%;
+    height: 100%;
+  }
+  .loginForm {
+    width: 100%;
+  }
+  footer,
+  .fieldProfile,
+  .logo {
+    display: none;
+  }
 }
