--- a/public/sass/other/_responsive.sass
+++ b/public/sass/other/_responsive.sass
@@ -1,19 +1,25 @@
 //Responsive
+@media (max-width: 550px)
+  .wrapper,
+  .section
+    padding: 0
+  
+  .wrapper
+    height: 100vh
+    
+  .mainCard,
+  .section,
+  .chat,
+  .invite,
+  .register,
+  .chat .mainCard
+    width: 100%
+    height: 100%
+  
+  .loginForm
+    width: 100%
 
-// @media all and (max-width: 1200px)
-//   .chat
-//     .mainCard
-//       height: $chat-mainCard-height * 0.7
-
-//     &__header
-//       height: $chat-header-height * 0.7
-
-//     &__messages
-//       height: $chat-messages-height * 0.7
-      
-//     &__fieldBlock
-//       height: $chat-fieldBlock-height * 0.7
-
-//     .profileImg
-//       height: $chat-avatar-size * 0.7
-//       width: $chat-avatar-size * 0.7
+  footer,
+  .fieldProfile,
+  .logo
+    display: none
