--- a/views/chat.html
+++ b/views/chat.html
@@ -1,37 +1,39 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-  <title></title>
-  <meta charset="utf-8">
-  <meta name="application-name" content="Translator" />
-  <link rel="stylesheet" href="../css/style.min.css">
-  <link rel="stylesheet" href="../css/font-awesome.min.css"> 
-  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600" rel="stylesheet">
-  <!--Favicons-->
-  <link rel="apple-touch-icon" sizes="57x57" href="../img/favicons/apple-icon-57x57.png">
-  <link rel="apple-touch-icon" sizes="60x60" href="../img/favicons/apple-icon-60x60.png">
-  <link rel="apple-touch-icon" sizes="72x72" href="../img/favicons/apple-icon-72x72.png">
-  <link rel="apple-touch-icon" sizes="76x76" href="../img/favicons/apple-icon-76x76.png">
-  <link rel="apple-touch-icon" sizes="114x114" href="../img/favicons/apple-icon-114x114.png">
-  <link rel="apple-touch-icon" sizes="120x120" href="../img/favicons/apple-icon-120x120.png">
-  <link rel="apple-touch-icon" sizes="144x144" href="../img/favicons/apple-icon-144x144.png">
-  <link rel="apple-touch-icon" sizes="152x152" href="../img/favicons/apple-icon-152x152.png">
-  <link rel="apple-touch-icon" sizes="180x180" href="../img/favicons/apple-icon-180x180.png">
-  <link rel="icon" type="image/png" sizes="192x192"  href="../img/favicons/android-icon-192x192.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="../img/favicons/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="96x96" href="../img/favicons/favicon-96x96.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="../img/favicons/favicon-16x16.png">
-  <link rel="manifest" href="../img/favicons/manifest.json">
-  <meta name="msapplication-TileColor" content="#ffffff">
-  <meta name="msapplication-TileImage" content="../img/favicons/ms-icon-144x144.png">
-  <meta name="theme-color" content="#ffffff">
+    <title></title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="application-name" content="Translator" />
+    <link rel="stylesheet" href="../css/style.min.css">
+    <link rel="stylesheet" href="../css/font-awesome.min.css">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600" rel="stylesheet">
+    <!--Favicons-->
+    <link rel="apple-touch-icon" sizes="57x57" href="../img/favicons/apple-icon-57x57.png">
+    <link rel="apple-touch-icon" sizes="60x60" href="../img/favicons/apple-icon-60x60.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="../img/favicons/apple-icon-72x72.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="../img/favicons/apple-icon-76x76.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="../img/favicons/apple-icon-114x114.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="../img/favicons/apple-icon-120x120.png">
+    <link rel="apple-touch-icon" sizes="144x144" href="../img/favicons/apple-icon-144x144.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="../img/favicons/apple-icon-152x152.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="../img/favicons/apple-icon-180x180.png">
+    <link rel="icon" type="image/png" sizes="192x192" href="../img/favicons/android-icon-192x192.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="../img/favicons/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="../img/favicons/favicon-96x96.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="../img/favicons/favicon-16x16.png">
+    <link rel="manifest" href="../img/favicons/manifest.json">
+    <meta name="msapplication-TileColor" content="#ffffff">
+    <meta name="msapplication-TileImage" content="../img/favicons/ms-icon-144x144.png">
+    <meta name="theme-color" content="#ffffff">
 </head>
 
 <body>
-  <div class="wrapper">
-    <div class="logo">
-      <a href="/" title="To home page">
-      <svg class="sizeSmall colorNormal" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 141.7 141.7" style="enable-background:new 0 0 142 142;" xml:space="preserve">
+    <div class="wrapper">
+        <div class="logo">
+            <a href="/" title="To home page">
+                <svg class="sizeSmall colorNormal" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 141.7 141.7" style="enable-background:new 0 0 142 142;" xml:space="preserve">
         <g class="circle">
           <circle class="st0" cx="70.9" cy="70.9" r="70.9" />
           <path class="st1" d="M29.7,13.2C38.5,7,47,3.1,57.2,1.3c39-6.9,74.7,16.3,82.9,55.2c4.8,23-0.8,43.7-16,61.6
@@ -57,82 +59,82 @@
                   c0,0-0.4-1.9-3.7-1.6c0-1.4-0.8-2.4-0.8-2.4c1.4-0.8,4.7-1,6,0.4C59.7,49.2,59.1,55.6,57.2,56.4z" />
           <path class="st1" d="M42.8,47.1c0,0,1.8,7.5,3.8,9.8c2,2.3,0.4,4.6-1.4,3S40.7,54,42.8,47.1z" /> </g>
       </svg>
-      </a>
-    </div>
-    <section class="section">
-      <!-- These elements are displayed as white info cards in the middle of the screen -->
+            </a>
+        </div>
+        <section class="section">
+            <!-- These elements are displayed as white info cards in the middle of the screen -->
 
-      <!-- Register -->
-      <div id="connected" class="register hide">
-        <div class="mainCard">
-          <div class="userPhoto"></div>
-          <div class="infoConnected"></div>
-          <div class="data">
-            <form class="loginForm">
-              <div class="loginForm__item">
-                <label for="name">You name:</label>
-                <input id="yourName" type="text" name="name" placeholder="John Brown"> </div>
-              <!-- <div class="loginForm__item">
+            <!-- Register -->
+            <div id="connected" class="register hide">
+                <div class="mainCard">
+                    <div class="userPhoto"></div>
+                    <div class="infoConnected"></div>
+                    <div class="data">
+                        <form class="loginForm">
+                            <div class="loginForm__item">
+                                <label for="name">You name:</label>
+                                <input id="yourName" type="text" name="name" placeholder="John Brown"> </div>
+                            <!-- <div class="loginForm__item">
                 <label for="email">You e-mail:</label>
                 <input id="yourEmail" type="text" name="email" placeholder="example@mail.com"> </div> -->
-              <div class="loginForm__item">
-                <label for="langauge">You language:</label>
-                <select id="yourSelect" name="langauge" disabled></select>
-              </div>
-              <button type="submit" id="yourEnter" value="ENTER" class="defaultBtn">Enter</button>
-            </form>
-          </div>
-        </div>
-      </div>
+                            <div class="loginForm__item">
+                                <label for="langauge">You language:</label>
+                                <select id="yourSelect" name="langauge" disabled></select>
+                            </div>
+                            <button type="submit" id="yourEnter" value="ENTER" class="defaultBtn">Enter</button>
+                        </form>
+                    </div>
+                </div>
+            </div>
 
-      <!-- Join -->
-      <div id="personinside" class="invite hide">
-        <div class="mainCard">
-          <div class="twoUserPhoto">
-            <div class="userPhoto"></div>
-            <div class="moreIcon">
-              <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" x="0" y="0" viewBox="0 0 612 612" xml:space="preserve" enable-background="new 0 0 612 612">
+            <!-- Join -->
+            <div id="personinside" class="invite hide">
+                <div class="mainCard">
+                    <div class="twoUserPhoto">
+                        <div class="userPhoto"></div>
+                        <div class="moreIcon">
+                            <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" x="0" y="0" viewBox="0 0 612 612" xml:space="preserve" enable-background="new 0 0 612 612">
                 <circle class="dot1" cx="69.55" cy="306" r="69.55" />
                 <circle class="dot2" cx="306" cy="306" r="69.55" />
                 <circle class="dot3" cx="542.46" cy="306" r="69.55" /> </svg>
-            </div>
-            <div class="userPhoto"></div>
-          </div>
-          <p class="invite__description"><span class="nickname-chat"></span> invited you to chat!</p>
-          <form class="loginForm">
-            <div class="loginForm__item">
-              <label for="name">You name:</label>
-              <input id="hisName" type="text" name="name" placeholder="John Brown"> </div>
-            <!-- <div class="loginForm__item">
+                        </div>
+                        <div class="userPhoto"></div>
+                    </div>
+                    <p class="invite__description"><span class="nickname-chat"></span> invited you to chat!</p>
+                    <form class="loginForm">
+                        <div class="loginForm__item">
+                            <label for="name">You name:</label>
+                            <input id="hisName" type="text" name="name" placeholder="John Brown"> </div>
+                        <!-- <div class="loginForm__item">
               <label for="email">You e-mail:</label>
               <input id="hisEmail" type="text" name="email" placeholder="example@mail.com"> </div> -->
-            <div class="loginForm__item">
-              <label for="langauge">You language:</label>
-              <select id="hisSelect" name="langauge" disabled> </select>
+                        <div class="loginForm__item">
+                            <label for="langauge">You language:</label>
+                            <select id="hisSelect" name="langauge" disabled> </select>
+                        </div>
+                        <button type="submit" id="hisEnter" value="ENTER" class="defaultBtn">Join</button>
+                    </form>
+                </div>
             </div>
-            <button type="submit" id="hisEnter" value="ENTER" class="defaultBtn">Join</button>
-          </form>
-        </div>
-      </div>
- 
-      <!-- Invite -->
-      <div id="invite-textfield" class="invite hide">
-        <div class="mainCard">
-          <div class="twoUserPhoto">
-            <div class="userPhoto"></div>
-            <div class="moreIcon">
-              <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" x="0" y="0" viewBox="0 0 612 612" xml:space="preserve" enable-background="new 0 0 612 612">
+
+            <!-- Invite -->
+            <div id="invite-textfield" class="invite hide">
+                <div class="mainCard">
+                    <div class="twoUserPhoto">
+                        <div class="userPhoto"></div>
+                        <div class="moreIcon">
+                            <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" x="0" y="0" viewBox="0 0 612 612" xml:space="preserve" enable-background="new 0 0 612 612">
                 <circle class="dot1" cx="69.55" cy="306" r="69.55" />
                 <circle class="dot2" cx="306" cy="306" r="69.55" />
                 <circle class="dot3" cx="542.46" cy="306" r="69.55" /> </svg>
-            </div>
-            <div class="userPhoto"></div>
-          </div>
-          <p class="invite__description">Invite a friend by sending them this URL</p>
-          <p class="invite__link">
-            <a title="Invite a friend" href="" id="link"></a>
-          </p>
-          <!-- <div class="invite__share">
+                        </div>
+                        <div class="userPhoto"></div>
+                    </div>
+                    <p class="invite__description">Invite a friend by sending them this URL</p>
+                    <p class="invite__link">
+                        <a title="Invite a friend" href="" id="link"></a>
+                    </p>
+                    <!-- <div class="invite__share">
             <p class="share__header">Send invite into social networks:</p>
             <ul class="share__icons">
               <li>
@@ -149,81 +151,82 @@
               </li>
             </ul>
           </div> -->
-        </div>
-      </div>
-      
-      <!-- Info -->
-      <div id="left" class="hide">
-      	<div class="mainCard">
-	        <div class="info">
-	          <h2><span class="nickname-left"></span> has left this chat.</h2>
-	          <h5>Invite somebody else by sending them this page.</h5>
-	        </div>
-	      </div>
-      </div>
-      <div id="toomanypeople" class="hide">
-      	<div class="mainCard">
-        	<h2>Oops, you can not join this chat!</h2>
-        	<h5>There are already two people in it. Would you like to create a
-          <a title="New Room" href="/create" id="room">new room</a>?</h5>
-        </div>
-      </div>
-      
-      <!-- Chat -->
-      <div id="chatscreen" class="chat hide">
-        <div class="mainCard">
-          <!--Top of chat window -->
-          <div class="chat__header">
-            <div class="headerProfile">
-              <div class="profileImg"></div>
-              <div class="hisName"><span class="profileName"></span></div>
+                </div>
             </div>
-            <div class="settings"> </div>
-          </div>
-          <!--Middle of chat window -->
-          <div class="chat__messages">
-            <!--If no messages -->
-            <div class="noMessages">
-              <h2>You are chatting with <span class="profileName"></span></h2>
-              <h5>Send them a message from the form below!</h5>
+
+            <!-- Info -->
+            <div id="left" class="hide">
+                <div class="mainCard">
+                    <div class="info">
+                        <h2><span class="nickname-left"></span> has left this chat.</h2>
+                        <h5>Invite somebody else by sending them this page.</h5>
+                    </div>
+                </div>
             </div>
-            <ul class="messageFlow">
-              <!-- The chat messages will go here -->
+            <div id="toomanypeople" class="hide">
+                <div class="mainCard">
+                    <h2>Oops, you can not join this chat!</h2>
+                    <h5>There are already two people in it. Would you like to create a
+                        <a title="New Room" href="/create" id="room">new room</a>?</h5>
+                </div>
+            </div>
+
+            <!-- Chat -->
+            <div id="chatscreen" class="chat hide">
+                <div class="mainCard">
+                    <!--Top of chat window -->
+                    <div class="chat__header">
+                        <div class="headerProfile">
+                            <div class="profileImg"></div>
+                            <div class="hisName"><span class="profileName"></span></div>
+                        </div>
+                        <div class="settings"> </div>
+                    </div>
+                    <!--Middle of chat window -->
+                    <div class="chat__messages">
+                        <!--If no messages -->
+                        <div class="noMessages">
+                            <h2>You are chatting with <span class="profileName"></span></h2>
+                            <h5>Send them a message from the form below!</h5>
+                        </div>
+                        <ul class="messageFlow">
+                            <!-- The chat messages will go here -->
+                        </ul>
+                    </div>
+                    <!--Bottom of chat window -->
+                    <div class="chat__fieldBlock">
+                        <form id="chatform" class="fieldForm">
+                            <div class="fieldProfile">
+                                <div class="profileImg"></div>
+                            </div>
+                            <div class="fieldMessage">
+                                <textarea name="message" class="messageArea" id="message" placeholder="Type here..."></textarea>
+                            </div>
+                            <div class="fieldSend">
+                                <button class="sendBtn" type="submit" value="SEND">Send</button>
+                            </div>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </div>
+    <footer>
+        <div class="footer-menu">
+            <ul>
+                <li class="footer-menu__item">
+                    <a href="/feedback" target="_blank">Feedback</a>
+                </li>
             </ul>
-          </div>
-          <!--Bottom of chat window -->
-          <div class="chat__fieldBlock">
-            <form id="chatform" class="fieldForm">
-              <div class="fieldProfile">
-                <div class="profileImg"></div>
-              </div>
-              <div class="fieldMessage">
-                <textarea name="message" class="messageArea" id="message" placeholder="Type here..."></textarea>
-              </div>
-              <div class="fieldSend">
-                <button class="sendBtn" type="submit" value="SEND">Send</button>
-              </div>
-            </form>
-          </div>
         </div>
-      </div>
-    </section>
-  </div>
-  <footer>
-    <div class="footer-menu">
-      <ul>
-        <li class="footer-menu__item">
-          <a href="/feedback" target="_blank">Feedback</a>
-        </li>
-      </ul>
-    </div>
-    <div class="copyright">
-      <p>Copyright © 2016 Translator demo version.</p>
-    </div>
-  </footer>
-  <script src="../js/jquery-3.1.0.min.js"></script>
-  <script src="../js/moment.min.js"></script>
-  <script src="/socket.io/socket.io.js"></script>
-  <script src="../js/main.js"></script>
+        <div class="copyright">
+            <p>Copyright © 2016 Translator demo version.</p>
+        </div>
+    </footer>
+    <script src="../js/jquery-3.1.0.min.js"></script>
+    <script src="../js/moment.min.js"></script>
+    <script src="/socket.io/socket.io.js"></script>
+    <script src="../js/main.js"></script>
 </body>
+
 </html>
