--- a/views/home.html
+++ b/views/home.html
@@ -2,42 +2,43 @@
 <html>
 
 <head>
-  <title>Translator - Home page</title>
-  <meta charset="uft-8">
-  <link rel="stylesheet" href="css/style.min.css">
-  <link rel="stylesheet" href="css/font-awesome.min.css">
-  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600" rel="stylesheet">
-  <!--Favicons-->
-  <link rel="apple-touch-icon" sizes="57x57" href="img/favicons/apple-icon-57x57.png">
-  <link rel="apple-touch-icon" sizes="60x60" href="img/favicons/apple-icon-60x60.png">
-  <link rel="apple-touch-icon" sizes="72x72" href="img/favicons/apple-icon-72x72.png">
-  <link rel="apple-touch-icon" sizes="76x76" href="img/favicons/apple-icon-76x76.png">
-  <link rel="apple-touch-icon" sizes="114x114" href="img/favicons/apple-icon-114x114.png">
-  <link rel="apple-touch-icon" sizes="120x120" href="img/favicons/apple-icon-120x120.png">
-  <link rel="apple-touch-icon" sizes="144x144" href="img/favicons/apple-icon-144x144.png">
-  <link rel="apple-touch-icon" sizes="152x152" href="img/favicons/apple-icon-152x152.png">
-  <link rel="apple-touch-icon" sizes="180x180" href="img/favicons/apple-icon-180x180.png">
-  <link rel="icon" type="image/png" sizes="192x192" href="img/favicons/android-icon-192x192.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="img/favicons/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="96x96" href="img/favicons/favicon-96x96.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="img/favicons/favicon-16x16.png">
-  <link rel="manifest" href="img/favicons/manifest.json">
-  <meta name="msapplication-TileColor" content="#ffffff">
-  <meta name="msapplication-TileImage" content="img/favicons/ms-icon-144x144.png">
-  <meta name="theme-color" content="#ffffff"> 
+    <title>Translator - Home page</title>
+    <meta charset="uft-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="css/style.min.css">
+    <link rel="stylesheet" href="css/font-awesome.min.css">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600" rel="stylesheet">
+    <!--Favicons-->
+    <link rel="apple-touch-icon" sizes="57x57" href="img/favicons/apple-icon-57x57.png">
+    <link rel="apple-touch-icon" sizes="60x60" href="img/favicons/apple-icon-60x60.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="img/favicons/apple-icon-72x72.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="img/favicons/apple-icon-76x76.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="img/favicons/apple-icon-114x114.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="img/favicons/apple-icon-120x120.png">
+    <link rel="apple-touch-icon" sizes="144x144" href="img/favicons/apple-icon-144x144.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="img/favicons/apple-icon-152x152.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="img/favicons/apple-icon-180x180.png">
+    <link rel="icon" type="image/png" sizes="192x192" href="img/favicons/android-icon-192x192.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="img/favicons/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="img/favicons/favicon-96x96.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="img/favicons/favicon-16x16.png">
+    <link rel="manifest" href="img/favicons/manifest.json">
+    <meta name="msapplication-TileColor" content="#ffffff">
+    <meta name="msapplication-TileImage" content="img/favicons/ms-icon-144x144.png">
+    <meta name="theme-color" content="#ffffff">
 </head>
 
 <body>
-  <div class="wrapper">
-    <section class="home">
-      <div class="messageTo">
-        <p class="messageText">Hello!</p>
-      </div>
-      <div class="messageFrom">
-        <p class="messageText">Привет!</p>
-      </div>
-      <div class="logo">
-        <svg class="sizeNormal colorNormal" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 142 142" style="enable-background:new 0 0 142 142;" xml:space="preserve">
+    <div class="wrapper">
+        <section class="home">
+            <div class="messageTo">
+                <p class="messageText">Hello!</p>
+            </div>
+            <div class="messageFrom">
+                <p class="messageText">Привет!</p>
+            </div>
+            <div class="logo">
+                <svg class="sizeNormal colorNormal" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 142 142" style="enable-background:new 0 0 142 142;" xml:space="preserve">
           <g class="circle">
             <circle class="st0" cx="70.9" cy="70.9" r="70.9" />
             <path class="st1" d="M29.7,13.2C38.5,7,47,3.1,57.2,1.3c39-6.9,74.7,16.3,82.9,55.2c4.8,23-0.8,43.7-16,61.6
@@ -63,29 +64,29 @@
                      c0,0-0.4-1.9-3.7-1.6c0-1.4-0.8-2.4-0.8-2.4c1.4-0.8,4.7-1,6,0.4C59.7,49.2,59.1,55.6,57.2,56.4z" />
             <path class="st1" d="M42.8,47.1c0,0,1.8,7.5,3.8,9.8c2,2.3,0.4,4.6-1.4,3S40.7,54,42.8,47.1z" /> </g>
         </svg>
-      </div>
-      <div class="content">
-        <h1 class="home__name">Translator</h1>
-        <p class="home__tagline">World without borders</p>
-        <p class="home__description">Simple messaging application that breaks the language barrier</p>
-        <a title="Create" href="/create">
-          <button class="defaultBtn">Start</button>
-        </a>
-      </div>
-    </section>
-  </div>
-  <footer>
-    <div class="footer-menu">
-      <ul>
-        <li class="footer-menu__item">
-          <a href="/feedback" target="_blank">Feedback</a>
-        </li>
-      </ul>
+            </div>
+            <div class="content">
+                <h1 class="home__name">Translator</h1>
+                <p class="home__tagline">World without borders</p>
+                <p class="home__description">Simple messaging application that breaks the language barrier</p>
+                <a title="Create" href="/create">
+                    <button class="defaultBtn">Start</button>
+                </a>
+            </div>
+        </section>
     </div>
-    <div class="copyright">
-      <p>Copyright © 2016 Translator demo version.</p>
-    </div>
-  </footer>
+    <footer>
+        <div class="footer-menu">
+            <ul>
+                <li class="footer-menu__item">
+                    <a href="/feedback" target="_blank">Feedback</a>
+                </li>
+            </ul>
+        </div>
+        <div class="copyright">
+            <p>Copyright © 2016 Translator demo version.</p>
+        </div>
+    </footer>
 </body>
 
 </html>
